[gd_scene load_steps=2 format=2]

[ext_resource path="res://games/Pac-Party/scripts/index.gd" type="Script" id=1]

[node name="index" type="Node2D"]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="Map" type="Node2D" parent="."]

[node name="ColorMapR" type="Tween" parent="."]

[node name="ColorMapG" type="Tween" parent="."]

[node name="ColorMapB" type="Tween" parent="."]
